Ros2_workspace/log/build_2022-05-22_15-06-19/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 117
    def main(args=None):
    ^
SyntaxError: invalid syntax

